Creacion de entidad para registrar el usuario junto el monto correspondiente en un gasto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/cuentasclaras?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/cuentas_claras?useSSL=false
 spring.datasource.hikari.data-source-properties.useSSL=false
 server.ssl.enabled=false
 
