--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/cuentas_claras?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/cuentas_claras?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.hikari.data-source-properties.useSSL=false
 server.ssl.enabled=false
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.username=root
 spring.datasource.password=935root935
 server.port=9090
