JWT con spring security

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/cuentas_claritas?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/cuentas_clarass?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.hikari.data-source-properties.useSSL=false
 server.ssl.enabled=false
 
