--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@ng-icons/core": "^26.3.0",
     "@ng-icons/font-awesome": "^26.3.0",
     "bootstrap-icons": "^1.11.3",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
