--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
